# gnss_share

./: .gitignore  .gitlab-ci.yml  README.md  gnss-share.conf  gnss_share.conf  go.mod  go.sum  meson.build
cmd/gnss-share/: main.go
cmd/gnss_share/: main.go
cmd/stmctl/: main.go
gnss_share/: __main__.py  gnss_share.in  logger.py  main.py  stm_agps.py  stm_agps_serial.py
internal/config/: config.go
internal/gnss/: gnss.go  stm.go
internal/nmea/: nmea.go  nmea_test.go
internal/pool/: pool.go
internal/server/: server.go
openrc/: gnss-share.confd  gnss-share.initd  gnss_share.confd  gnss_share.initd
systemd/: gnss-share.service  gnss_share.service
